--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <footer>
         <div class="footer-container">
             <div class="logo">
-                <img src="/asset/logo/logo.png" alt=""><br>
+                <img src="asset/logo/logo.png" alt=""><br>
                 <p class="footer-desc">Auctor blandit dolorem primis eius odit soluta <br> molestie? Malesuada elementum aut doloremque labo.</p>
                 <div class="social-icon">
                     <i class="fa-brands fa-facebook"></i>
