--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
             </p>
             <div class="cards">
                 <div class="card">
-                    <img class="blog-img" src="/asset/image/blog-1.jpg" alt="">
+                    <img class="blog-img" src="asset/image/blog-1.jpg" alt="">
                     <h3 class="card-title">Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolores autem possimus quaerat
                         veniam quam dicta velit provident molestiae aperiam saepe hic dolorum excepturi, labore
                         laudantium error, fugiat blanditiis repellat.</p>
                 </div>
                 <div class="card">
-                    <img class="blog-img" src="/asset/image/blog-2.jpg" alt="">
+                    <img class="blog-img" src="asset/image/blog-2.jpg" alt="">
                     <h3 class="card-title">Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolores autem possimus quaerat
                         veniam quam dicta velit provident molestiae aperiam saepe hic dolorum excepturi, labore
                         laudantium error, fugiat blanditiis repellat.</p>
                 </div>
                 <div class="card">
-                    <img class="blog-img" src="/asset/image/blog-3.jpg" alt="">
+                    <img class="blog-img" src="asset/image/blog-3.jpg" alt="">
                     <h3 class="card-title">Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolores autem possimus quaerat
                         veniam quam dicta velit provident molestiae aperiam saepe hic dolorum excepturi, labore
